Fix card label z-index (#1673)
* Fix card label z-index

This removes the z-index that was set on the card-label. The z-index was
there to push the content above warning & modal `::after`s, but then
caused issues by covering e.g. the close button in the dapps explorer.

By setting the z-index once and for all on the `page-content` and using
said `page-content` to wrap all the inner content of cards we ensure
that elements inside cards are consistently shown.

* 🤖 Selenium screenshots auto-update

---------

--- a/src/frontend/src/styles/main.css
+++ b/src/frontend/src/styles/main.css
@@ -893,8 +893,6 @@ a:hover,
   text-transform: uppercase;
   font-weight: 600;
   line-height: 1.1;
-  position: relative;
-  z-index: 2;
 }
 
 .c-card__label + .t-title {
@@ -942,6 +940,12 @@ by all browsers (FF is missing) */
 .c-card__content {
   position: relative;
   z-index: var(--z-foreground);
+  /* The card content is insed the c-card, so is padded. But since it
+   * should fit the card itself (and contain all the card' contents) we
+   * enlarge it to counteract the effect of the card's content.
+   */
+  margin: calc(-1 * var(--rs-card-bezel)) calc(-1 * var(--rs-card-bezel-x));
+  padding: var(--rs-card-bezel) var(--rs-card-bezel-x);
 }
 
 .c-card__title {
